prepare for gdnsd 3.x

--- a/gdnsd/install.txt
+++ b/gdnsd/install.txt
@@ -1,4 +1,4 @@
-pacman -S libev ragel liburcu libunwind
+pacman -S libev liburcu libsodium libunwind
 useradd -d / -M -r -s /usr/bin/nologin gdnsd
 autoreconf -vif
 ./configure --localstatedir=/var --with-rundir=/run
